k8s/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: init-script
          configMap:
            name: users-db-init

---
apiVersion: v1
kind: Service
metadata:
  name: users-db
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: users-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-db
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: init-script
          configMap:
            name: products-db-init

---
apiVersion: v1
kind: Service
metadata:
  name: products-db
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: products-db
  ports:
    - port: 3306
      targetPort: 3306


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: init-script
          configMap:
            name: orders-db-init

---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: orders-db
  ports:
    - port: 3306
      targetPort: 3306
