k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: romerito1025/parcial-orders:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - port: 5004
      targetPort: 5004
