k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: romerito1025/parcial-products:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - port: 5003
      targetPort: 5003
