k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: romerito1025/parcial-users:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - port: 5002
      targetPort: 5002
