k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp-ingress
  namespace: microapp
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 5002

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 5002

          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 5003

          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 5004
